--- a/web/pwa/src/app/page/settings/settings.page.scss
+++ b/web/pwa/src/app/page/settings/settings.page.scss
@@ -32,3 +32,9 @@ ion-item {
 ion-select {
     margin-right: 0.5em;
 }
+
+.test-proxy-button {
+    max-height: 1.5em;
+    align-self: end;
+    margin-right: 12px;
+}
