--- a/web/pwa/src/app/page/storage/edit-file-dialog/edit-file-dialog.component.html
+++ b/web/pwa/src/app/page/storage/edit-file-dialog/edit-file-dialog.component.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Edit {{subjectName.toLowerCase()}}</ion-title>
+        <ion-title>Edit {{ subjectName.toLowerCase() }}</ion-title>
 
         <ion-buttons slot="primary">
             <ion-button (click)="onSaveClick()" [disabled]="formGroup.invalid">Save</ion-button>
@@ -15,9 +15,12 @@
 <ion-content fullscreen>
     <form [formGroup]="formGroup" (keydown.enter)="onEnter()">
         <ion-item lines="none">
-            <ion-label position="stacked">{{subjectName}} name</ion-label>
-            <ion-input placeholder="Enter {{subjectName.toLowerCase()}} name"
-                formControlName="name"></ion-input>
+            <ion-input
+                label="{{ subjectName }} name"
+                labelPlacement="stacked"
+                placeholder="Enter {{ subjectName.toLowerCase() }} name"
+                formControlName="name"
+            ></ion-input>
         </ion-item>
 
         <ion-item lines="none">
@@ -25,18 +28,21 @@
         </ion-item>
 
         <ion-item lines="none">
-            <ion-label><ion-icon name="lock-closed-outline" size="small"></ion-icon>Readonly</ion-label>
-            <ion-checkbox formControlName="attrReadonly"></ion-checkbox>
+            <ion-checkbox labelPlacement="fixed" formControlName="attrReadonly"
+                ><ion-icon name="lock-closed-outline" size="small"></ion-icon>Readonly</ion-checkbox
+            >
         </ion-item>
 
         <ion-item lines="none">
-            <ion-label><ion-icon name="eye-off-outline" size="small"></ion-icon>Hidden</ion-label>
-            <ion-checkbox formControlName="attrHidden"></ion-checkbox>
+            <ion-checkbox labelPlacement="fixed" formControlName="attrHidden"
+                ><ion-icon name="eye-off-outline" size="small"></ion-icon>Hidden</ion-checkbox
+            >
         </ion-item>
 
         <ion-item lines="none">
-            <ion-label><ion-icon name="cog-outline" size="small"></ion-icon>System</ion-label>
-            <ion-checkbox formControlName="attrSystem"></ion-checkbox>
+            <ion-checkbox labelPlacement="fixed" formControlName="attrSystem"
+                ><ion-icon name="cog-outline" size="small"></ion-icon>System</ion-checkbox
+            >
         </ion-item>
     </form>
 </ion-content>
