--- a/web/pwa/src/app/page/storage/subpage-cards/subpage-cards.component.html
+++ b/web/pwa/src/app/page/storage/subpage-cards/subpage-cards.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header [translucent]="true">
     <ion-toolbar *ngIf="mode === 'manage'">
         <ion-title>Memory cards</ion-title>
 
@@ -37,7 +37,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content (contextmenu)="onContextMenu($event)">
+<ion-content (contextmenu)="onContextMenu($event)" [fullscreen]="true">
     <ion-header collapse="condense">
         <ion-toolbar>
             <ion-title size="large" *ngIf="mode === 'manage'">Memory cards</ion-title>
