--- a/web/pwa/src/app/page/about/about.page.scss
+++ b/web/pwa/src/app/page/about/about.page.scss
@@ -16,8 +16,8 @@
 
 markdown {
     display: block;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    margin-left: 1em;
+    margin-right: 1em;
     max-width: var(--cp-page-width);
 }
 
@@ -39,5 +39,19 @@ markdown {
 @media (prefers-color-scheme: dark) {
     .logo {
         filter: invert(100%);
+    }
+}
+
+.wrapper-outer {
+    position: relative;
+}
+
+.wrapper-inner {
+    position: absolute;
+    padding-bottom: 50px;
+    z-index: 0;
+
+    .ios & {
+        padding-bottom: 90px;
     }
 }
